--- a/styles.css
+++ b/styles.css
@@ -14,13 +14,20 @@ display: flex;
 justify-content: center;
 }
 
-.letters-container {
-    display: flex;
-    height: 60vh;
-    width: 60vw;
-    justify-content: center;
-}
+/* .letters-container {
+    width: 45vw;
+    margin: 30px 30px 0 140px;
+    height: 40px;
+} */
 
+.letter {
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+    right: 90px;
+    margin: 0px 30px 0px 5px;
+    width: 25px
+}
 
 .container {
     display: flex;
@@ -52,7 +59,7 @@ justify-content: center;
     border-radius: 10px;
     border: 5px;
     position: absolute;
-    margin: 90px 60px 0;
+    margin: 90px 30px 0;
     background-color: #0d1b2a;
     color: white;
 }
@@ -62,7 +69,7 @@ justify-content: center;
     border-radius: 10px;
     border: 5px;
     position: absolute;
-    margin: 200px 62px 0;
+    margin: 200px 32px 0;
     background-color: #0d1b2a;
     color: white;
     font-size: 20px;
@@ -75,7 +82,7 @@ justify-content: center;
     border-radius: 10px;
     border: 5px;
     position: absolute;
-    margin: 320px 62px 0;
+    margin: 320px 32px 0;
     color: white;
     background-color: #0d1b2a;
     
