--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,25 @@ display: flex;
 justify-content: center;
 }
 
+.again {
+height: 20px;
+
+}
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .popup-close {
+    margin-top: 10px;
+  }
+
 /* .plot {
     display: flex;
     height: 55vh;
